ecmascript/parser/tests/test262-error-references/fail/d4e259842c4520e1.js.stderr
error: Expected ), got None
 --> $DIR/tests/test262-parser/fail/d4e259842c4520e1.js:1:5
  |
1 | 1 + (
  |     ^

